--- a/about.html
+++ b/about.html
@@ -158,7 +158,11 @@
                     Master',
                     by the government of Myanmar.</p> -->
                 <!-- Summarized by ChatGPT -->
-                <p>Sayadaw Ashin Pin Nya Tha Mi has excelled in his monastic education, passing numerous religious exams with honors. His relentless pursuit of wisdom earned him an honorary Doctor of Oriental Learning (Ph.D.) in history from the Indian Institute of Oriental Heritage in 2013. His dedication was further recognized when he was awarded the Thiri Pyanchi honor in 2022 and the title of Agga Maha Kammatthanacariya in 2023 by the Myanmar government.</p>
+                <p>Sayadaw Ashin Pin Nya Tha Mi has excelled in his monastic education, passing numerous religious exams
+                    with honors. His relentless pursuit of wisdom earned him an honorary Doctor of Oriental Learning
+                    (Ph.D.) in history from the Indian Institute of Oriental Heritage in 2013. His dedication was
+                    further recognized when he was awarded the Thiri Pyanchi honor in 2022 and the title of Agga Maha
+                    Kammatthanacariya in 2023 by the Myanmar government.</p>
 
                 <h2>Community work</h2>
                 <!-- <p>The Venerable Sayadaw has also engaged in several other religious and social activities such as
@@ -195,7 +199,12 @@
                     also a member of a KNU delegation that negotiated peace with the Burmese government in January 2012.
                 </p> -->
                 <!-- Summarized by ChatGPT -->
-                <p>Sayadaw has been deeply involved in religious and social activities, including preaching, teaching meditation, renovating pagodas, and serving on the National Sangha Committee. He founded multiple monasteries and Monastic Education Schools in Kayin State, providing broader access to education. He has also been a leading peace negotiator for the Karen Peace Council since 1993 and established several social and development projects, including the Phlon Education Development Unit, First Aid Groups, and the orthopedic rehabilitation center in Hpa-an Township.</p>
+                <p>Sayadaw has been deeply involved in religious and social activities, including preaching, teaching
+                    meditation, renovating pagodas, and serving on the National Sangha Committee. He founded multiple
+                    monasteries and Monastic Education Schools in Kayin State, providing broader access to education. He
+                    has also been a leading peace negotiator for the Karen Peace Council since 1993 and established
+                    several social and development projects, including the Phlon Education Development Unit, First Aid
+                    Groups, and the orthopedic rehabilitation center in Hpa-an Township.</p>
 
                 <h2>Activities abroad</h2>
                 <!-- <p>The Venerable Sayadaw has traveled extensively. He has traveled to India, Nepal, and Sri Lanka in
@@ -207,11 +216,16 @@
                     With the motto “Toward the peaceful state of Nirvana,”
                     the Venerable Sayadaw Ashin Pin Nya Tha Mi continues
                     to write books and articles while practicing and teaching meditation.</p> -->
-                <!-- summarized by ChatGPT --> 
-                <p>Ven. Taunggalay Sayadaw has traveled extensively, sharing his teachings and inspiring people worldwide. His travels include India, Nepal, Sri Lanka, Thailand, Singapore, Japan, Australia, and America, where he has conducted Dhamma talks and promoted Buddhism. His work has profoundly impacted communities, encouraging them to lead better lives and contribute positively to society. Sayadaw continues to write books and articles, spreading his message of peace and the path toward Nirvana.</p>
-                </div>
+                <!-- summarized by ChatGPT -->
+                <p>Ven. Taunggalay Sayadaw has traveled extensively, sharing his teachings and inspiring people
+                    worldwide. His travels include India, Nepal, Sri Lanka, Thailand, Singapore, Japan, Australia, and
+                    America, where he has conducted Dhamma talks and promoted Buddhism. His work has profoundly impacted
+                    communities, encouraging them to lead better lives and contribute positively to society. Sayadaw
+                    continues to write books and articles, spreading his message of peace and the path toward Nirvana.
+                </p>
+            </div>
         </div>
-        
+
 
         <!-- <section class="bg-light center padding">
             <div class="margin-bottom margin-top max-width-m">
@@ -244,7 +258,7 @@
                     <ul class="blank">
                         <li><a href="mailto:maharpyinnyar2020@gmail.com">Email Us</a></li>
                     </ul>
-                    
+
                 </div>
                 <div class="col-one-fifth">
                     <h6>Design</h6>
