--- a/academics.html
+++ b/academics.html
@@ -68,7 +68,8 @@
         <p class="lead">
           Taunggalay Buddhist College welcomes applications from bhikkhu, bhikkhunī, and laypeople who have completed a
           certain level of Pariyatti study in Buddhism. Applicants must be between the ages of 18 and 25 and have a
-          basic or intermediate level of English proficiency, as all instruction will be in English and conducted online. For those
+          basic or intermediate level of English proficiency, as all instruction will be in English and conducted
+          online. For those
           fluent only in Burmese and East Pwo Karen (Phlon), teaching assistants will be available to provide guidance
           throughout the course.
         </p>
@@ -91,7 +92,8 @@
         <div class="col-one-third">
           <i class="feature-icons material-icons bg-gradient-pink dark">tune</i>
           <h5>Language of instruction</h5>
-          <p class="lead">All instruction will be in English, and conducted online. For those fluent only in Burmese and East Pwo
+          <p class="lead">All instruction will be in English, and conducted online. For those fluent only in Burmese and
+            East Pwo
             Karen (Phlon), teaching assistants will be available to provide guidance throughout the course.</p>
         </div>
       </div>
@@ -123,9 +125,10 @@
           </div>
           <div class="col-one-fourth">
             <img class="min-width-l rounded" src="media/content/courses/religst-101.png"
-              srcset="media/content/courses/religst-101.png 1x, media/content/courses/religst-101@2x.png 2x" alt="RELIGST 101">
+              srcset="media/content/courses/religst-101.png 1x, media/content/courses/religst-101@2x.png 2x"
+              alt="RELIGST 101">
             <h6><br>DHAMMA 101 <br>Buddhist Culture</h6>
-          </div>   
+          </div>
         </div>
       </div>
       <div class="max-width-l">
@@ -141,13 +144,13 @@
           </div>
           <div class="col-one-fourth">
             <img class="min-width-l rounded" src="media/content/courses/phys-101.jpeg"
-              srcset="media/content/courses/phys-101.jpeg 1x, media/content/courses/phys-101@2x.jpeg 2x"
-              alt="CHEM 101">
+              srcset="media/content/courses/phys-101.jpeg 1x, media/content/courses/phys-101@2x.jpeg 2x" alt="CHEM 101">
             <h6><br>PHYS 101 <br>Introductory Physics</h6>
           </div>
           <div class="col-one-fourth">
             <img class="min-width-l rounded" src="media/content/courses/religst-102.png"
-              srcset="media/content/courses/religst-102.png 1x, media/content/courses/religst-102@2x.png 2x" alt="RELIGST 102">
+              srcset="media/content/courses/religst-102.png 1x, media/content/courses/religst-102@2x.png 2x"
+              alt="RELIGST 102">
             <h6><br>DHAMMA 102 <br>Buddhist Logic and Epistemology</h6>
           </div>
         </div>
@@ -156,16 +159,23 @@
         <div class="row margin-bottom">
           <div class="col-one-half middle">
             <h2>Final Year</h2>
-            <h5>Specialization</h5>
+            <!-- <h5>Specialization</h5> -->
           </div>
           <div class="col-one-half">
             <!-- <img class="min-width-l rounded" src="media/content/courses/math-101.jpeg" -->
-              <!-- srcset="media/content/courses/math-101.jpeg 1x, media/content/courses/math-101@2x.jpeg 2x" alt="MATH 101"> -->
-            <p>In the second year, students choose to specialize in one of the following areas: <b>Vinaya Pitaka, Sutta Pitaka, Abhidhamma Pitaka, or East Pwo Karen Literature, Tradition and Custom, Culture, or History.</b>
-              <br> 
-              <br>
-            <p>They will conduct research and prepare a 250-300 page thesis, which can be written in English, Myanmar, East Pwo Karen, or Pali, demonstrating their mastery of their chosen specialization and contributing to the academic fields of Buddhist studies or East Pwo Karen studies.</p> 
-              <!-- In-depth study of the monastic rules and regulations that govern the conduct of Buddhist monks and nuns.               -->
+            <!-- srcset="media/content/courses/math-101.jpeg 1x, media/content/courses/math-101@2x.jpeg 2x" alt="MATH 101"> -->
+            <p>In the second year, students choose to specialize in one of the following areas:
+            <ul>
+              <li><b>Vinaya Pitaka, Sutta Pitaka, or Abhidhamma Pitaka</b></li>
+              <li><b>East Pwo Karen Literature, Tradition and Custom, Culture, or History.</b></li>
+            </ul>
+
+            <!-- <p>They will conduct research and prepare a 250-300 page thesis, which can be written in English, Myanmar, East Pwo Karen, or Pali, demonstrating their mastery of their chosen specialization and contributing to the academic fields of Buddhist studies or East Pwo Karen studies. Students specializing in this area will also take a minor class in East Pwo Karen literature and culture for two semesters.</p>  -->
+            <p>They will conduct research and prepare a 250-300 page thesis, which can be written in English, Myanmar,
+              East Pwo Karen, or Pali, contributing to the academic fields of Buddhist studies or East Pwo Karen
+              studies. Students specializing in East Pwo Karen Literature, Tradition and Custom, Culture, or History
+              will also take a minor class in East Pwo Karen literature and culture for two semesters.</p>
+            <!-- In-depth study of the monastic rules and regulations that govern the conduct of Buddhist monks and nuns.               -->
             </p>
           </div>
           <!-- <div class="col-one-fifth">
@@ -188,11 +198,12 @@
         
               </h6>
           </div> -->
-          </div>
+        </div>
       </div>
 
-      <p class="left"><b>Disclaimer:</b> Some of the course images are generated using AI for inspirational purposes only and may not accurately depict real-life situations.</p>
-<!-- 
+      <p class="left"><b>Disclaimer:</b> Some of the course images are generated using AI for inspirational purposes
+        only and may not accurately depict real-life situations.</p>
+      <!-- 
       <div class="max-width-l">
         <div class="row margin-bottom"></div></div> -->
 
@@ -206,7 +217,8 @@
         <div class="col-one-fifth">
           <h6>Exchange Programs</h6>
           <ul class="blank">
-            <li><a href="https://www.facebook.com/profile.php?id=100064552794214">Karen Buddhist Association of North Carolina</a></li>
+            <li><a href="https://www.facebook.com/profile.php?id=100064552794214">Karen Buddhist Association of North
+                Carolina</a></li>
             <li><a href="https://www.facebook.com/mkbavicaus">Melbourne Karen Buddhist Association</a></li>
           </ul>
         </div>
