--- a/style-guide.html
+++ b/style-guide.html
@@ -1,9 +1,11 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <title>Taunggalay Buddhist College - Design System</title>
   <meta charset="utf-8" />
-  <meta name="description" content="Taunggalay Buddhist College is a unique educational institution that aims to bridge the gap between traditional Buddhist teachings and modern scientific knowledge." />
+  <meta name="description"
+    content="Taunggalay Buddhist College is a unique educational institution that aims to bridge the gap between traditional Buddhist teachings and modern scientific knowledge." />
   <meta name="viewport" content="width=device-width" />
   <link rel="apple-touch-icon-precomposed" href="media/favicon-tbc-logo.png" />
   <link rel="icon" href="media/favicon-tbc-logo.png" />
@@ -11,6 +13,7 @@
   <link rel="shortcut icon" href="media/favicon-tbc-logo.png" />
   <link rel="stylesheet" href="css/main.css" />
 </head>
+
 <body class="page page-style-guide preload">
 
   <header class="header-main dark">
@@ -25,7 +28,8 @@
         <li><a href="academics.html">Academics</a></li>
         <li><a href="about.html">About</a></li>
         <!-- <li><a href="login.html" class="button button-secondary button-m full-width-tablet" role="button">Log In</a></li> -->
-        <li><a href="signup.html" class="button button-primary button-m full-width-tablet" role="button">Sign Up</a></li>
+        <li><a href="signup.html" class="button button-primary button-m full-width-tablet" role="button">Sign Up</a>
+        </li>
       </ul>
     </nav>
   </header>
@@ -65,13 +69,14 @@
           <section id="logo">
             <h4>Logo</h4>
             <p class="paragraph">
-              University Motto and Seal 
-              
-              “မဂ်ချမ်းသာ ပိုမိုမြင့်၊ ကဲ,ချင့် တောက်ထွန်း” is Taunggalay Buddhist College's official motto 
-              and translates as “The Fruition of Holy Path Surpasses All.” 
+              University Motto and Seal
+
+              “မဂ်ချမ်းသာ ပိုမိုမြင့်၊ ကဲ,ချင့် တောက်ထွန်း” is Taunggalay Buddhist College's official motto
+              and translates as “The Fruition of Holy Path Surpasses All.”
               <!-- The motto is part of the university seal? -->
             </p>
-            <img class="left rounded" src="media/logos/logo-370x370.png" srcset="media/logos/logo-370x370.png 1x, media/logos/logo-370x370.png 2x" alt="Sketch">
+            <img class="left rounded" src="media/logos/logo-370x370.png"
+              srcset="media/logos/logo-370x370.png 1x, media/logos/logo-370x370.png 2x" alt="Sketch">
             <!-- <div class="divider"></div>
             <table>
               <tr>
@@ -639,7 +644,8 @@
         <div class="col-one-fifth">
           <h6>Exchange Programs</h6>
           <ul class="blank">
-            <li><a href="https://www.facebook.com/profile.php?id=100064552794214">Karen Buddhist Association of North Carolina</a></li>
+            <li><a href="https://www.facebook.com/profile.php?id=100064552794214">Karen Buddhist Association of North
+                Carolina</a></li>
             <li><a href="https://www.facebook.com/mkbavicaus">Melbourne Karen Buddhist Association</a></li>
           </ul>
         </div>
@@ -682,4 +688,5 @@
   <script src="js/jquery.min.js"></script>
   <script src="js/main.js"></script>
 </body>
+
 </html>
