update academics page

--- a/academics.html
+++ b/academics.html
@@ -55,8 +55,8 @@
       <div class="margin-bottom margin-top max-width-m">
         <h2>Degree Program</h2>
         <p class="lead">The two-year degree program at Taunggalay Buddhist College offers a unique curriculum that
-          combines core courses in mathematics, English, physics, chemistry, Buddha logic, and Buddhist culture with
-          specialized tracks in Vinaya Pitaka, Sutta Pitaka, and Abhidhamma Pitaka. This interdisciplinary approach
+          combines core courses in mathematics, English, physics, chemistry, Buddhist logic, and Buddhist culture with
+          specialized tracks in Vinaya Pitaka, Sutta Pitaka, Abhidhamma Pitaka, and East Pwo Karen studies. This interdisciplinary approach
           allows students to develop a well-rounded understanding of both the theoretical and practical aspects of
           Buddhism, while also gaining proficiency in essential academic subjects.
       </div>
@@ -66,12 +66,9 @@
       <div class="margin-bottom margin-top">
         <h2>Admission Requirements</h2>
         <p class="lead">
-          Taunggalay Buddhist College welcomes applications from bhikkhu, bhikkhunī, and laypeople who have completed a
-          certain level of Pariyatti study in Buddhism. Applicants must be between the ages of 18 and 25 and have a
-          basic or intermediate level of English proficiency, as all instruction will be in English and conducted
-          online. For those
-          fluent only in Burmese and East Pwo Karen (Phlon), teaching assistants will be available to provide guidance
-          throughout the course.
+          Taunggalay Buddhist College welcomes applications from bhikkhu, bhikkhunī, and laypeople who have completed any level of Pariyatti study or monastic examinations in
+          Buddhism. Applicants must be between the ages of 18 and 25 and have a basic or intermediate level of English proficiency, as all instruction will be in English and conducted
+          online. For those fluent only in Burmese and East Pwo Karen (Phlon), teaching assistants will be available to provide guidance throughout the course.
         </p>
       </div>
     </section>
@@ -79,10 +76,10 @@
     <section class="bg-dark center-tablet dark padding">
       <div class="row max-width-l">
         <div class="col-one-third">
-          <i class="feature-icons material-icons bg-gradient-indigo dark">tune</i>
+          <i class="feature-icons material-icons bg-gradient-indigo dark">self_improvement</i>
           <h5>Who can apply?</h5>
-          <p class="lead">Bhikkhu, bhikkhunī, and laypeople who have completed a certain level of Pariyatti study in
-            Buddhism</p>
+          <p class="lead">Bhikkhu, bhikkhunī, and laypeople who have completed any level of Pariyatti study or monastic examinations in
+            Buddhism.</p>
         </div>
         <div class="col-one-third">
           <i class="feature-icons material-icons bg-gradient-green dark">account_circle</i>
@@ -90,7 +87,7 @@
           <p class="lead">18-25 years old</p>
         </div>
         <div class="col-one-third">
-          <i class="feature-icons material-icons bg-gradient-pink dark">tune</i>
+          <i class="feature-icons material-icons bg-gradient-pink dark">language</i>
           <h5>Language of instruction</h5>
           <p class="lead">All instruction will be in English, and conducted online. For those fluent only in Burmese and
             East Pwo
@@ -164,7 +161,7 @@
           <div class="col-one-half">
             <!-- <img class="min-width-l rounded" src="media/content/courses/math-101.jpeg" -->
             <!-- srcset="media/content/courses/math-101.jpeg 1x, media/content/courses/math-101@2x.jpeg 2x" alt="MATH 101"> -->
-            <p>In the second year, students choose to specialize in one of the following areas:
+            <p>In the second year, students choose to specialize in one of the following areas.
             <ul>
               <li><b>Vinaya Pitaka, Sutta Pitaka, or Abhidhamma Pitaka</b></li>
               <li><b>East Pwo Karen Literature, Tradition and Custom, Culture, or History.</b></li>
@@ -173,7 +170,9 @@
             <!-- <p>They will conduct research and prepare a 250-300 page thesis, which can be written in English, Myanmar, East Pwo Karen, or Pali, demonstrating their mastery of their chosen specialization and contributing to the academic fields of Buddhist studies or East Pwo Karen studies. Students specializing in this area will also take a minor class in East Pwo Karen literature and culture for two semesters.</p>  -->
             <p>They will conduct research and prepare a 250-300 page thesis, which can be written in English, Myanmar,
               East Pwo Karen, or Pali, contributing to the academic fields of Buddhist studies or East Pwo Karen
-              studies. Students specializing in East Pwo Karen Literature, Tradition and Custom, Culture, or History
+              studies. 
+            <br>
+              Students specializing in East Pwo Karen Literature, Tradition and Custom, Culture, or History
               will also take a minor class in East Pwo Karen literature and culture for two semesters.</p>
             <!-- In-depth study of the monastic rules and regulations that govern the conduct of Buddhist monks and nuns.               -->
             </p>
