--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
         <br>
         <br>
         <h1>Taunggalay Buddhist College</h1>
+        <!-- tbc's motto -->
+        <!-- <p class="lead">The Fruition of Holy Path Surpasses all</p> -->
+        <!-- လ်ုခါင့်လ်ုယာ့အ်ုၯင်ႋ -->
         <p class="lead">Where Buddhism meets Science</p>
         <!-- <a href="signup.html" class="button button-primary space-top" role="button">Get started, it's free!</a> -->
       </div>
@@ -117,13 +120,13 @@
           </ul>
         </div>
         <div class="col-one-half">
-          <img class="min-width-l rounded" src="media/content/editor.jpeg"
+          <img class="min-width-m rounded" src="media/content/editor.jpeg"
             srcset="media/content/editor.jpeg 1x, media/content/editor@2x.jpeg 2x" alt="Editor">
         </div>
       </div>
       <div class="row max-width-l">
         <div class="col-one-half">
-          <img class="min-width-l right rounded" src="media/content/sketch.jpeg"
+          <img class="min-width-m right rounded" src="media/content/sketch.jpeg"
             srcset="media/content/sketch.jpeg 1x, media/content/sketch@2x.jpeg 2x" alt="Sketch">
         </div>
         <div class="col-one-half center-tablet middle">
