--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
             <li><img src="media/logos/logo-css3.png" srcset="media/logos/logo-css3.png 1x, media/logos/logo-css3@2x.png 2x" alt="CSS3"></li>
             <li><img src="media/logos/logo-sass.png" srcset="media/logos/logo-sass.png 1x, media/logos/logo-sass@2x.png 2x" alt="Sass"></li> -->
           </ul>
+        
         </div>
         <div class="col-one-half">
           <img class="min-width-l rounded" src="media/content/editor.jpeg" srcset="media/content/editor.jpeg 1x, media/content/editor@2x.jpeg 2x" alt="Editor">
@@ -112,7 +113,7 @@
         </div>
         <div class="col-one-half center-tablet middle">
           <!-- <h2>Designed In Sketch</h2> -->
-          <p class="lead"><i>Avoid hatred and violence and persuit gentle means; tolerance and Ahimsa leads to success.</i></p>
+          <p class="lead"><i>Avoid hatred and violence and pursue gentle means; tolerance and Ahimsa leads to success.</i></p>
           <ul class="inline space-top">
             <!-- <li><img src="media/logos/logo-sketch.png" srcset="media/logos/logo-sketch.png 1x, media/logos/logo-sketch@2x.png 2x" alt="Sketch"></li> -->
           </ul>
