--- a/academics.html
+++ b/academics.html
@@ -200,7 +200,7 @@
         </div>
       </div>
 
-      <p class="left"><b>Disclaimer:</b> Some of the course images are generated using AI for inspirational purposes
+      <p class="middle"><b>Disclaimer:</b> Some of the course images are generated using AI for inspirational purposes
         only and may not accurately depict real-life situations.</p>
       <!-- 
       <div class="max-width-l">
