add application link

--- a/academics.html
+++ b/academics.html
@@ -28,7 +28,7 @@
         <li><a href="academics.html">Academics</a></li>
         <li><a href="about.html">About</a></li>
         <!-- <li><a href="login.html" class="button button-secondary button-m full-width-tablet" role="button">Log In</a></li> -->
-        <li><a href="signup.html" class="button button-primary button-m full-width-tablet" role="button">Apply Now</a>
+        <li><a href="https://forms.gle/RtbEJcM7MkSnDiNAA" class="button button-primary button-m full-width-tablet" role="button">Apply Now</a>
         </li>
       </ul>
     </nav>
