add social link

--- a/index.html
+++ b/index.html
@@ -235,6 +235,24 @@
 
   <script src="js/jquery.min.js"></script>
   <script src="js/main.js"></script>
+  
+  <!-- Bootstrap core JS-->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+  <!-- Core theme JS-->
+  <script src="js/scripts.js"></script>
+  <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
+  <!-- * *                               SB Forms JS                               * *-->
+  <!-- * * Activate your form at https://startbootstrap.com/solution/contact-forms * *-->
+  <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
+  <!-- <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script> -->
+
+  <!-- https://codepen.io/neel2292/pen/bVLGMO -->
+  <div class="fabs">
+      <a href="https://www.facebook.com/sharer/sharer.php?u=https://buddhism.mahar.asia/" target="_blank"
+          class="fab indigo" tooltip="Facebook"><i class="sec bi-facebook animated"></i></a>
+      <a target="_blank" class="fab red" tooltip="Share"><i class="prime animated rotateIn bi-share"></i></a>
+  </div>
+
 </body>
 
 </html>
