add facebook share link

--- a/index.html
+++ b/index.html
@@ -8,12 +8,16 @@
     content="Taunggalay Buddhist College is a unique educational institution that aims to bridge the gap between traditional Buddhist teachings and modern scientific knowledge." />
   <meta name="viewport" content="width=device-width" />
   <meta property="og:image"
-    content="https://raw.githubusercontent.com/taunggalay-buddhism-college/taunggalay-buddhism-college.github.io/main/media/facebook-preview-image-apply.png"/>
+    content="https://raw.githubusercontent.com/taunggalay-buddhism-college/taunggalay-buddhism-college.github.io/main/media/facebook-preview-image-apply.png" />
   <link rel="apple-touch-icon-precomposed" href="media/favicon-tbc-logo.png" />
   <link rel="icon" href="media/favicon-tbc-logo.png" />
   <link rel="mask-icon" href="media/favicon-tbc-logo.png" color="rgb(36,38,58)" />
   <link rel="shortcut icon" href="media/favicon-tbc-logo.png" />
   <link rel="stylesheet" href="css/main.css" />
+
+  <!-- Bootstrap icons-->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
+
 </head>
 
 <body class="page page-home preload">
@@ -35,7 +39,8 @@
         <li><a href="academics.html">Academics</a></li>
         <li><a href="about.html">About</a></li>
         <!-- <li><a href="login.html" class="button button-secondary button-m full-width-tablet" role="button">Log In</a></li> -->
-        <li><a href="https://forms.gle/RtbEJcM7MkSnDiNAA" class="button button-primary button-m full-width-tablet" role="button">Apply Now</a>
+        <li><a href="https://forms.gle/RtbEJcM7MkSnDiNAA" class="button button-primary button-m full-width-tablet"
+            role="button">Apply Now</a>
         </li>
       </ul>
     </nav>
@@ -120,7 +125,7 @@
             <li><img src="media/logos/logo-css3.png" srcset="media/logos/logo-css3.png 1x, media/logos/logo-css3@2x.png 2x" alt="CSS3"></li>
             <li><img src="media/logos/logo-sass.png" srcset="media/logos/logo-sass.png 1x, media/logos/logo-sass@2x.png 2x" alt="Sass"></li> -->
           </ul>
-        
+
         </div>
         <div class="col-one-half">
           <img class="min-width-m rounded" src="media/content/editor.jpeg"
@@ -134,7 +139,8 @@
         </div>
         <div class="col-one-half center-tablet middle">
           <!-- <h2>Designed In Sketch</h2> -->
-          <p class="lead"><i>Avoid hatred and violence and pursue gentle means; tolerance and Ahimsa leads to success.</i></p>
+          <p class="lead"><i>Avoid hatred and violence and pursue gentle means; tolerance and Ahimsa leads to
+              success.</i></p>
           <ul class="inline space-top">
             <!-- <li><img src="media/logos/logo-sketch.png" srcset="media/logos/logo-sketch.png 1x, media/logos/logo-sketch@2x.png 2x" alt="Sketch"></li> -->
           </ul>
@@ -235,22 +241,12 @@
 
   <script src="js/jquery.min.js"></script>
   <script src="js/main.js"></script>
-  
-  <!-- Bootstrap core JS-->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-  <!-- Core theme JS-->
-  <script src="js/scripts.js"></script>
-  <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
-  <!-- * *                               SB Forms JS                               * *-->
-  <!-- * * Activate your form at https://startbootstrap.com/solution/contact-forms * *-->
-  <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
-  <!-- <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script> -->
 
   <!-- https://codepen.io/neel2292/pen/bVLGMO -->
   <div class="fabs">
-      <a href="https://www.facebook.com/sharer/sharer.php?u=https://buddhism.mahar.asia/" target="_blank"
-          class="fab indigo" tooltip="Facebook"><i class="sec bi-facebook animated"></i></a>
-      <a target="_blank" class="fab red" tooltip="Share"><i class="prime animated rotateIn bi-share"></i></a>
+    <a href="https://www.facebook.com/sharer/sharer.php?u=https://buddhism.mahar.asia/" target="_blank"
+      class="fab indigo" tooltip="Facebook"><i class="sec bi-facebook animated"></i></a>
+    <a target="_blank" class="fab red" tooltip="Share"><i class="prime animated rotateIn bi-share"></i></a>
   </div>
 
 </body>
