--- a/about.html
+++ b/about.html
@@ -12,6 +12,9 @@
     <link rel="mask-icon" href="media/favicon-tbc-logo.png" color="rgb(36,38,58)" />
     <link rel="shortcut icon" href="media/favicon-tbc-logo.png" />
     <link rel="stylesheet" href="css/main.css" />
+    <!-- Bootstrap icons for hover facebook share-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
+
     <style>
         body {
             font-family: "Lato", Helvetica, sans-serif;
@@ -295,6 +298,14 @@
 
     <script src="js/jquery.min.js"></script>
     <script src="js/main.js"></script>
+
+    <!-- https://codepen.io/neel2292/pen/bVLGMO -->
+    <div class="fabs">
+        <a href="https://www.facebook.com/sharer/sharer.php?u=https://buddhism.mahar.asia/about.html" target="_blank"
+            class="fab indigo" tooltip="Facebook"><i class="sec bi-facebook animated"></i></a>
+        <a target="_blank" class="fab red" tooltip="Share"><i class="prime animated rotateIn bi-share"></i></a>
+    </div>
+
 </body>
 
 </html>
