--- a/academics.html
+++ b/academics.html
@@ -12,6 +12,10 @@
   <link rel="mask-icon" href="media/favicon-tbc-logo.png" color="rgb(36,38,58)" />
   <link rel="shortcut icon" href="media/favicon-tbc-logo.png" />
   <link rel="stylesheet" href="css/main.css" />
+
+  <!-- Bootstrap icons for hover facebook share-->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
+
 </head>
 
 <body class="page page-pricing preload">
@@ -28,7 +32,8 @@
         <li><a href="academics.html">Academics</a></li>
         <li><a href="about.html">About</a></li>
         <!-- <li><a href="login.html" class="button button-secondary button-m full-width-tablet" role="button">Log In</a></li> -->
-        <li><a href="https://forms.gle/RtbEJcM7MkSnDiNAA" class="button button-primary button-m full-width-tablet" role="button">Apply Now</a>
+        <li><a href="https://forms.gle/RtbEJcM7MkSnDiNAA" class="button button-primary button-m full-width-tablet"
+            role="button">Apply Now</a>
         </li>
       </ul>
     </nav>
@@ -56,7 +61,8 @@
         <h2>Degree Program</h2>
         <p class="lead">The two-year degree program at Taunggalay Buddhist College offers a unique curriculum that
           combines core courses in mathematics, English, physics, chemistry, Buddhist logic, and Buddhist culture with
-          specialized tracks in Vinaya Pitaka, Sutta Pitaka, Abhidhamma Pitaka, and East Pwo Karen studies. This interdisciplinary approach
+          specialized tracks in Vinaya Pitaka, Sutta Pitaka, Abhidhamma Pitaka, and East Pwo Karen studies. This
+          interdisciplinary approach
           allows students to develop a well-rounded understanding of both the theoretical and practical aspects of
           Buddhism, while also gaining proficiency in essential academic subjects.
       </div>
@@ -66,9 +72,12 @@
       <div class="margin-bottom margin-top">
         <h2>Admission Requirements</h2>
         <p class="lead">
-          Taunggalay Buddhist College welcomes applications from bhikkhu, bhikkhunī, and laypeople who have completed any level of Pariyatti study or monastic examinations in
-          Buddhism. Applicants must be between the ages of 18 and 25 and have a basic or intermediate level of English proficiency, as all instruction will be in English and conducted
-          online. For those fluent only in Burmese and East Pwo Karen (Phlon), teaching assistants will be available to provide guidance throughout the course.
+          Taunggalay Buddhist College welcomes applications from bhikkhu, bhikkhunī, and laypeople who have completed
+          any level of Pariyatti study or monastic examinations in
+          Buddhism. Applicants must be between the ages of 18 and 25 and have a basic or intermediate level of English
+          proficiency, as all instruction will be in English and conducted
+          online. For those fluent only in Burmese and East Pwo Karen (Phlon), teaching assistants will be available to
+          provide guidance throughout the course.
         </p>
       </div>
     </section>
@@ -78,7 +87,8 @@
         <div class="col-one-third">
           <i class="feature-icons material-icons bg-gradient-indigo dark">self_improvement</i>
           <h5>Who can apply?</h5>
-          <p class="lead">Bhikkhu, bhikkhunī, and laypeople who have completed any level of Pariyatti study or monastic examinations in
+          <p class="lead">Bhikkhu, bhikkhunī, and laypeople who have completed any level of Pariyatti study or monastic
+            examinations in
             Buddhism.</p>
         </div>
         <div class="col-one-third">
@@ -170,10 +180,11 @@
             <!-- <p>They will conduct research and prepare a 250-300 page thesis, which can be written in English, Myanmar, East Pwo Karen, or Pali, demonstrating their mastery of their chosen specialization and contributing to the academic fields of Buddhist studies or East Pwo Karen studies. Students specializing in this area will also take a minor class in East Pwo Karen literature and culture for two semesters.</p>  -->
             <p>They will conduct research and prepare a 250-300 page thesis, which can be written in English, Myanmar,
               East Pwo Karen, or Pali, contributing to the academic fields of Buddhist studies or East Pwo Karen
-              studies. 
-            <br>
+              studies.
+              <br>
               Students specializing in East Pwo Karen Literature, Tradition and Custom, Culture, or History
-              will also take a minor class in East Pwo Karen literature and culture for two semesters.</p>
+              will also take a minor class in East Pwo Karen literature and culture for two semesters.
+            </p>
             <!-- In-depth study of the monastic rules and regulations that govern the conduct of Buddhist monks and nuns.               -->
             </p>
           </div>
@@ -259,6 +270,15 @@
 
   <script src="js/jquery.min.js"></script>
   <script src="js/main.js"></script>
+
+
+  <!-- https://codepen.io/neel2292/pen/bVLGMO -->
+  <div class="fabs">
+    <a href="https://www.facebook.com/sharer/sharer.php?u=https://buddhism.mahar.asia/academics.html" target="_blank"
+      class="fab indigo" tooltip="Facebook"><i class="sec bi-facebook animated"></i></a>
+    <a target="_blank" class="fab red" tooltip="Share"><i class="prime animated rotateIn bi-share"></i></a>
+  </div>
+
 </body>
 
 </html>
